--- a/index.html
+++ b/index.html
@@ -66,32 +66,20 @@
         "Content-Type": "application/json",
       },
       data: JSON.stringify({ text: text }),
-      xhr: function () {
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function () {
-          if (xhr.readyState == 2) {
-            if (xhr.status == 200) {
-              xhr.responseType = "blob";
-            } else {
-              xhr.responseType = "text";
-            }
-          }
-        };
-        return xhr;
-      },
       success: function (data) {
         try {
           console.log(data);
+          play(data.url);
           // var blob = new Blob([data], { type: "audio/wav" });
-          var url = URL.createObjectURL(data);
-          var wavesurfer = WaveSurfer.create({
-            container: "#waveform",
-            waveColor: "violet",
-            progressColor: "purple",
-          });
-          wavesurfer.load(url);
-          wavesurfer.playPause();
-          console.log(url);
+          // var url = URL.createObjectURL(data);
+          // var wavesurfer = WaveSurfer.create({
+          //   container: "#waveform",
+          //   waveColor: "violet",
+          //   progressColor: "purple",
+          // });
+          // wavesurfer.load(url);
+          // wavesurfer.playPause();
+          // console.log(url);
           // play(url);
 
           // url = url.replace(host, "");
@@ -127,6 +115,7 @@
 
   try {
     speech();
+    // play("/files/audio/test.mp3");
   } catch (err) {
     postError(err);
   }
